Fix: code blocks overlap sticky header on scroll

--- a/src/ui/templates/template-app/templateApp.scss
+++ b/src/ui/templates/template-app/templateApp.scss
@@ -16,6 +16,7 @@
     grid-column: 1/3;
     grid-row: 2/3;
     width: 100%;
+    z-index: 10;
 
     @media screen and (min-width: 850px) {
       position: sticky;
